--- a/main.css
+++ b/main.css
@@ -294,7 +294,7 @@ body {
     flex-direction: column;
     margin: 0;
     color: #fff;
-    font-family: 'pt sans';
+    font-family: 'PT Sans',sans-serif;
     font-weight: normal;
     font-size: 1rem;
     position: relative;
