--- a/canvas/collage/main.css
+++ b/canvas/collage/main.css
@@ -29,11 +29,13 @@ body{
 }
 
 .collage__items img{
-	padding: 5rem;
+	/* padding: 5rem; */
 	user-select: none;
 	cursor: pointer;
 }
-
+.collage-item{
+	margin: 5rem;
+}
 .collage-item.active{
 	opacity: 0;
 }
@@ -48,7 +50,7 @@ body{
 
 .collage-avatar{
 	position: relative;
-	padding-top: 28px;
+	/* padding-top: 28rem; */
 	user-select: none;
 	cursor: pointer;
 	width: 157rem;
@@ -56,13 +58,14 @@ body{
 }
 
 .collage-avatar__pin{
+	user-select: none;
 	content: '';
 	position: absolute;
 	width: 54rem !important;
 	height: 49rem;
 	left: 0;
 	right: 0;
-	top: -3rem;
+	top: -30rem;
 	margin: auto;
 	background-image: url('img/ava-pin.png');
 	background-repeat: no-repeat;
@@ -71,17 +74,26 @@ body{
 	
 }
 
-.collage-avatar img{
+.collage-avatar{
+	box-sizing: border-box;
+}
+
+/* .collage-avatar img{
 	width: 100%;
 	padding: 0;
+} */
+
+.collage-avatar__border{
+	width: 157rem;
+	height: 157rem;
 }
 
 .collage-avatar__input{
 	position: absolute;
-	width: 132rem;
-	height: 126rem;
-	top: 37rem;
-	left: 12rem;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
 	opacity: 0;
 	cursor: pointer;
 	z-index: 1;
@@ -98,20 +110,27 @@ body{
 
 .collage-avatar-userpic{
 	position: absolute;
-	width: 133rem;
-	height: 123rem;
-	top: 35rem;
-	left: 12rem;
-	cursor: pointer;
-	overflow: hidden;
+    width: 141rem;
+    height: 129rem;
+    /* top: 37rem; */
+	top: 10rem;
+    left: 9rem;
+    cursor: pointer;
+    overflow: hidden;
 }
 
 .collage-avatar-userpic img{
-	width: 100%;
-	height: 100%;
+	/* width: 100%;
+	height: 100%; */
+	width: 141rem;
+    height: 129rem;
 	object-fit: cover;
 	object-position: center;
 	opacity: 0;
+}
+
+.collage-hidden{
+	display: none;
 }
 
 .collage-mobile-items {
